<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConfirmNumberFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/new_code_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title_text_view"
            style="@style/CreamCloud.TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_code" />

        <TextView
            android:id="@+id/info_text_view"
            style="@style/CreamCloud.InfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/we_sent_code" />

        <!-- CREATE ENTER CODE VIEW -->
        <TextView
            android:id="@+id/phone_text_field"
            style="@style/CreamCloud.PhoneNumberTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="_ _ _ _"
            android:gravity="center" />

        <TextView
            android:id="@+id/error_text_view"
            style="@style/CreamCloud.ErrorTextView"
            android:text="@string/incorrect_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/new_code_text_view"
        style="@style/CreamCloud.InfoTextView"
        android:text="@string/if_you_have_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/confirm_button"
        style="@style/CreamCloud.CodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:enabled="false"
        android:text="@string/get_new_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"/>

</androidx.constraintlayout.widget.ConstraintLayout>